Bildunterschriften: Nur Punkt, wenn Satz

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -76,7 +76,8 @@ Codepoints.
     \Char{‹} & \keys{\AltGr+\shift+x} & \codepoint{2039}\\
     \bottomrule
   \end{tabular}
-  \caption{Anführungszeichen und wie sie erzeugt werden können.}\label{tab:quotationMarks}
+  \caption{Anführungszeichen und wie sie erzeugt werden können}
+  \label{tab:quotationMarks}
 \end{table}
 
 \section{Apostrophe}
@@ -199,7 +200,8 @@ Tastatur erzeugen kann.
 %    Minuszeichen & \Char{\textminus} & & \codepoint{2212}\\
     \bottomrule
   \end{tabular}
-  \caption{Striche und wie sie erzeugt werden können.}\label{tab:striche}
+  \caption{Striche und wie sie erzeugt werden können}
+  \label{tab:striche}
 \end{table}
 
 \subsection{Minus- und Gleichheitszeichen}
