--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -56,7 +56,8 @@ Verhältnis einmal 70\,\% und einmal 60\,\% beträgt.
   \caption{Zwei Satzspiegel, die den klassischen Prinzipien genügen. Die
     Ausgangsseite hat (wie alle \acr{DIN}-Formate) ein Seitenverhältnis von
     1\,:\,$\sqrt{\text{2}}$. Das Breitenverhältnis zwischen Satzspiegel und Seite ist
-    einmal 70\,\% (links) und einmal 60\,\% (rechts).}\label{fig:Satzspiegel}
+    einmal 70\,\% (links) und einmal 60\,\% (rechts).}
+  \label{fig:Satzspiegel}
 \end{figure}
 
 \subsection{Rasterteilung}
@@ -89,7 +90,8 @@ festgesetzt werden.
   \end{tikzpicture}
   \caption{Eine Rasterteilung mit Rasterfaktor 9, auch
     \emph{Neunerteilung} genannt. Das entstehende Breitenverhältnis ist
-    \smallfrac69\,=\,\smallfrac23.}\label{fig:DIV}
+    \smallfrac69\,=\,\smallfrac23.}
+  \label{fig:DIV}
 \end{figure}
 
 
@@ -129,7 +131,8 @@ Konstruktion werden allerdings nun links und rechts 1,5 Spalten entfernt, siehe
     \draw[black!60,thin,fill=black!15] (.15,{.2*sqrt(2)}) rectangle (.85,{.9*sqrt(2)});
   \end{tikzpicture}
   \caption{Mehrere einseitige Satzspiegel durch Rasterteilung, mit
-    Rasterfaktor 8, 9 und 10.}\label{fig:einseitig}
+    Rasterfaktoren 8, 9 und 10}
+  \label{fig:einseitig}
 \end{figure}
 
 \subsection{Mehr Freiheit}
@@ -180,7 +183,8 @@ zwei- oder dreispaltiger Satz an.
   \caption{Anteil am Flächeninhalt und Zeilenlängen (für \acr{DIN A4}, \acr{DIN
       B5} und \acr{DIN A5}) für unterschiedliche Rasterfaktoren. Für diese
     Werte wurde die Schriftart Minion mit 11\,pt verwendet. Bei strenger
-    Auslegung würde bei \acr{DIN A4} kein Rasterfaktor über 7 infrage kommen.}\label{tab:Papier}
+    Auslegung würde bei \acr{DIN A4} kein Rasterfaktor über 7 infrage kommen.}
+  \label{tab:Papier}
 \end{table}
 
 \section{Die Stege}
@@ -228,7 +232,8 @@ noch einmal schematisch visualisiert.
   \end{tikzpicture}
   \caption{Eine rechte Buchseite mit Kopf- und Fußzeile sowie markiertem Bereich
     für Marginalien. Hier hat die Seite wieder ein Verhältnis von
-    1\,:\,$\sqrt{\text{2}}$ und der Satzspiegel eines von 3\,:\,5.}\label{fig:Stege}
+    1\,:\,$\sqrt{\text{2}}$ und der Satzspiegel eines von 3\,:\,5.}
+  \label{fig:Stege}
 \end{figure}
 
 \section{Umbrüche \emph{\&} Absätze}
