--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -277,6 +277,7 @@ eingibt, sondern indem man eine Leerzeile im Quellcode (also zweimal
 
 Gewünscht sein können, je nach Tradition, zwei verschiedene Dinge, wobei man
 sich global für eines davon entscheiden sollte: Im europäischen Sprachraum ist
+\todo{Das Wort »Sprachraum« passt hier nicht.}
 es üblich, dass der neue Absatz ohne zusätzlichen vertikalen Zwischenraum in der
 nächsten Zeile beginnt, diese neue Zeile allerdings mit einem \emph{Einzug},
 also einem Leerraum, von etwa einem Geviert beginnt. Im amerikanischen
