Correct usage of »Zeilenhöhe« vs. »Zeilenabstand«.

--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -318,7 +318,7 @@ Vor allem im doppelseitigen Layout ist es wünschenswert, dass alle voll
 beschriebenen Seiten unten bündig enden, also bis zum unteren Ende des
 Satzspiegels gefüllt sind. Würden alle Seiten nur aus Text bestehen, wäre dies
 leicht zu bewerkstelligen, indem man darauf achtet, dass die Höhe des
-Satzspiegels ein Vielfaches der Zeilenhöhe\todo{plus Zeilenabstand?} beträgt. In
+Satzspiegels ein Vielfaches des Zeilenabstands beträgt. In
 der Praxis finden sich aber auf vielen Seiten andere Elemente wie Überschriften
 der Graphiken, sodass manche Seiten ein bisschen früher enden. Dem wird durch
 ein vertikales Analogon zum Blocksatz entgegengewirkt, das manche vertikalen
