--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -320,7 +320,7 @@ Satzspiegels gefüllt sind. Würden alle Seiten nur aus Text bestehen, wäre die
 leicht zu bewerkstelligen, indem man darauf achtet, dass die Höhe des
 Satzspiegels ein Vielfaches des Zeilenabstands\todo{Zeilenabstand = Zeilenhöhe+Durchschuss} beträgt. In
 der Praxis finden sich aber auf vielen Seiten andere Elemente wie Überschriften
-der Graphiken, sodass manche Seiten ein bisschen früher enden. Dem wird durch
+oder Graphiken, sodass manche Seiten ein bisschen früher enden. Dem wird durch
 ein vertikales Analogon zum Blocksatz entgegengewirkt, das manche vertikalen
 Abstände (z.\,B. zwischen Überschriften, ein bisschen auch zwischen Absätzen)
 streckt und staucht, um die Bündigkeit zu erzielen.
