--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -323,7 +323,7 @@ der Praxis finden sich aber auf vielen Seiten andere Elemente wie Überschriften
 oder Graphiken, sodass manche Seiten ein bisschen früher enden. Dem wird durch
 ein vertikales Analogon zum Blocksatz entgegengewirkt, das manche vertikalen
 Abstände (z.\,B. zwischen Überschriften, ein bisschen auch zwischen Absätzen)
-streckt und staucht, um die Bündigkeit zu erzielen.
+streckt und staucht, um Bündigkeit zu erzielen.
 
 Kapitel (und ebenso Inhalts- und Literaturverzeichnisse) werden stets auf einer
 neuen \emph{rechten} Seite begonnen. Ist also ein Kapitel zuende, folgt
