--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -33,15 +33,88 @@ Schnitten nennt man dann auch eine \emph{Schriftfamilie}.\footnote{Das
   (während ich diesen Text schreibe) kein Beispiel für eine Schriftart
   ein, von der es nur einen Schnitt gibt, die also keine Familie ist.}
 
+Schriftarten werden nach Aspekten ihrer Gestaltung klassifiziert.  Wir
+beschäftigen uns hier nur mit \emph{Satzschriften} (also keine
+Handschriften) für das lateinische Alphabet.  Diese werden
+grundsätzlich unterschieden in zwei \emph{Schriftgattungen}, nämlich
+\emph{Antiqua-Schriften}\footnote{Auch für das griechische, armenische
+  und kyrillische Alphabet sind Antiqua-Schriften heutzutage üblich.}
+einerseits und \emph{gebrochene Schriften} andererseits: in
+gebrochenen Schriften haben die Bögen der Buchstaben »Knicke«; in
+Antiqua-Schriften sind sie rund.  Heutzutage werden fast alle
+Druckerzeugnisse im lateinischen Alphabet in Antiqua-Schriften
+gesetzt, gebrochene Schriften (bspw. \emph{Textura},
+\emph{Schwabacher}, \emph{Fraktur}) sind veraltet.
+
+\todo[inline]{Ein, zwei Sätze Historisches: Herkunft der Groß- und
+  Kleinbuchstaben.}
+
+Innerhalb der Gattung der Antiqua-Schriften werden Schriftarten weiter
+in kleineren »Taxa« (um mal ein Wort aus der Biologie
+zweckzuentfremden) klassifiziert:\footnote{In der Zeit des Bleisatzes
+  war in Deutschland die Klassifikation gemäß \acr{DIN}~16518 üblich
+  (siehe \url{https://de.wikipedia.org/wiki/DIN_16518}); diese ist
+  aber einerseits kunsthistorisch fragwürdig und andererseits
+  veraltet.  Wir orientieren uns im Folgenden grob an der Matrix
+  Beinert (siehe
+  \url{https://www.typolexikon.de/schriftklassifikation-matrix-beinert/}).}
+Die Gattung wird unterteilt in \emph{Hauptschriftgruppen} und diese
+jeweils in \emph{Schriftuntergruppen}.  Die Hauptschriftgruppen
+unterscheiden sich dabei durch die Art der an den Glyphen vorhandenen
+\emph{Serifen}, den Linien, die die Hauptstriche »abschließen«.  Die
+\todo{Abbildung (vergrößert) mit Serifen?}
+Klassifikation ist wie folgt:
 \begin{itemize}
-\item Schriftarten nach vielen Dingen klassifizierbar.  Alle
-  Schriften, die uns hier interessieren, sind \emph{Antiqua}-Schriften
-  (im Gegensatz zu gebrochenen Schriften, d.\,h. Fraktur und so).
-\item Gibt diverse Klassen (s. bspw. \acr{DIN}~16518).  Für uns hier
-  im Skript relevant: Mit Serifen und ohne (= Grotesk = Sans Serif =
-  Serifenlose Linear-Antiqua).
-\item Evtl. Historisches: Herkunft der Groß- und Kleinbuchstaben.
+\item Eine Schrift mit »normalen«, nicht betonten Serifen heißt
+  \emph{Antiqua} oder englisch \emph{\foreignlanguage{british}{serif}}
+  (ja, der Name der Hauptschriftgruppe ist derselbe wie der der
+  Gattung; diese Schriftarten waren nämlich die ursprünglichen
+  Antiqua-Schriften).  Nach ihrem historischen Entstehungszeitpunkt
+  werden die folgenden drei Schriftuntergruppen unterschieden:
+  \begin{itemize}
+  \item \emph{Renaissance-Antiqua}, mit den Schriftnebengruppen
+    \emph{Venezianische} und \emph{Französische Renaissance-Antiqua}:
+    bspw. {\fontfamily{EBGaramond-OsF}\selectfont Garamond},
+    {\fontfamily{pplj}\selectfont \textsmaller[.5]{Palatino}}, % URW Palladio L 
+    Minion
+  \item \emph{Vorklassizistische Antiqua}\footnote{Nach
+      \acr{DIN}~16518: »Barock-Antiqua« (irreführend)}:
+    bspw. {\fontfamily{Baskervaldx-OsF}\selectfont Baskerville},
+    {\fontfamily{ptm}\selectfont Times} % Nimbus Roman No. 9 L
+  \item \emph{Klassizistische Antiqua}:
+    bspw. {\fontfamily{bodoni}\selectfont Bodoni},
+    {\fontfamily{TheanoDidot-TOsF}\selectfont Didot},
+    {\fontfamily{lmr}\selectfont Computer Modern / Latin Modern}
+  \end{itemize}
+\item Eine Schrift mit betonten Serifen heißt \emph{Egyptienne} oder
+  englisch \emph{\foreignlanguage{british}{slab serif}}.\footnote{Nach
+    \acr{DIN}~16518: »Serifenbetonte Linear-Antiqua«}
+  (Schriftuntergruppen sind uns hier egal.)  Bspw.
+  {\fontfamily{bch}\selectfont Bitstream Charter},
+  {\fontfamily{ccr}\selectfont Concrete Roman},
+  {\fontfamily{ucr}\selectfont Courier} % Nimbus Mono L
+\item Eine Schrift ohne Serifen heißt \emph{Grotesk} oder englisch (ja
+  ja, mit Französisch) \emph{\foreignlanguage{british}{sans
+      serif}}.\footnote{Nach \acr{DIN}~16518: »Serifenlose
+    Linear-Antiqua«} (Auch hier sind uns Schriftuntergruppen egal.)
+  {\fontfamily{phv}\selectfont \textsmaller[.5]{Helvetica}}, % Nimbus Sans L
+  {\fontfamily{pag}\selectfont \textsmaller[.5]{Avant Garde}}, % Gothic L
+  Bspw.  {\fontfamily{ua1}\selectfont \textsmaller[.5]{Arial}} % URW A030
+\item Die letzte Hauptschriftgruppe der Antiqua-Schriften sind
+  \emph{Zierschriften}.  Das sind generell alle Antiqua-Schriften, die
+  keine Antiqua, Egyptienne oder Grotesk sind. Zu ihnen gehören
+  u.\,a. die sog. \emph{Antiqua-Varianten} nach \acr{DIN}~16518.  Ein
+  Beispiel für letztere sind sog. \emph{Inzisen}, an Inschriften
+  orientierte Schriften mit sehr dezenten Serifen, wie bspw.
+  \textsf{\textsmaller[.5]{Optima / Classico}}.\footnote{Die Optima
+    wird gerne --~so auch in diesem Skript~-- als Grotesk zu Palatino
+    oder Minion verwendet, obwohl sie eigentlich™ keine ist.}
 \end{itemize}
+Die Gestaltung und Klassifikation von Schriften gleicht einem Fass
+ohne Boden; wir gehen nicht weiter darauf ein.
+
+\todo[inline]{Angeblich™ lesen sich Schriften mit Serifen im Fließtext
+  leichter; auf jeden Fall sind sie traditioneller.}
 
 \section{Schriftschnitte}
 \label{sec:Schnitte}
