Reformulate, and write footnote.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -66,11 +66,12 @@ unterscheiden sich dabei durch die Art der an den Glyphen vorhandenen
 Klassifikation ist wie folgt:
 \begin{itemize}
 \item Eine Schrift mit »normalen«, nicht betonten Serifen heißt
-  \emph{Antiqua} oder englisch \emph{\foreignlanguage{british}{serif}}
-  (ja, der Name der Hauptschriftgruppe ist derselbe wie der der
-  Gattung; diese Schriftarten waren nämlich die ursprünglichen
-  Antiqua-Schriften).  Nach ihrem historischen Entstehungszeitpunkt
-  werden die folgenden drei Schriftuntergruppen unterschieden:
+  \emph{Antiqua} bzw. englisch \emph{\foreignlanguage{british}{serif}}
+  oder \emph{\foreignlanguage{british}{roman}} (ja, der Name der
+  Hauptschriftgruppe ist derselbe wie der der Gattung; diese
+  Schriftarten waren nämlich die ursprünglichen Antiqua-Schriften).
+  Nach ihrem historischen Entstehungszeitpunkt werden die folgenden
+  drei Schriftuntergruppen unterschieden:
   \begin{itemize}
   \item \emph{Renaissance-Antiqua}, mit den Schriftnebengruppen
     \emph{Venezianische} und \emph{Französische Renaissance-Antiqua}:
@@ -86,14 +87,14 @@ Klassifikation ist wie folgt:
     {\fontfamily{TheanoDidot-TOsF}\selectfont Didot},
     {\fontfamily{lmr}\selectfont Computer Modern / Latin Modern}
   \end{itemize}
-\item Eine Schrift mit betonten Serifen heißt \emph{Egyptienne} oder
+\item Eine Schrift mit betonten Serifen heißt \emph{Egyptienne} bzw.
   englisch \emph{\foreignlanguage{british}{slab serif}}.\footnote{Nach
     \acr{DIN}~16518: »Serifenbetonte Linear-Antiqua«}
   (Schriftuntergruppen sind uns hier egal.)  Bspw.
   {\fontfamily{bch}\selectfont Bitstream Charter},
   {\fontfamily{ccr}\selectfont Concrete Roman},
   {\fontfamily{ucr}\selectfont Courier} % Nimbus Mono L
-\item Eine Schrift ohne Serifen heißt \emph{Grotesk} oder englisch (ja
+\item Eine Schrift ohne Serifen heißt \emph{Grotesk} bzw. englisch (ja
   ja, mit Französisch) \emph{\foreignlanguage{british}{sans
       serif}}.\footnote{Nach \acr{DIN}~16518: »Serifenlose
     Linear-Antiqua«} (Auch hier sind uns Schriftuntergruppen egal.)
@@ -111,7 +112,9 @@ Klassifikation ist wie folgt:
     oder Minion verwendet, obwohl sie eigentlich™ keine ist.}
 \end{itemize}
 Die Gestaltung und Klassifikation von Schriften gleicht einem Fass
-ohne Boden; wir gehen nicht weiter darauf ein.
+ohne Boden; wir gehen hier nicht weiter ins Detail.\footnote{Wer
+  möchte, kann dazu sehr viel Weitergehendes auf Wikipedia oder im
+  Typo\-lexikon (\url{https://www.typolexikon.de/}) lesen.}
 
 \todo[inline]{Angeblich™ lesen sich Schriften mit Serifen im Fließtext
   leichter; auf jeden Fall sind sie traditioneller.}
