--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -46,8 +46,19 @@ Druckerzeugnisse im lateinischen Alphabet in Antiqua-Schriften
 gesetzt, gebrochene Schriften (bspw. \emph{Textura},
 \emph{Schwabacher}, \emph{Fraktur}) sind veraltet.
 
-\todo[inline]{Ein, zwei Sätze Historisches: Herkunft der Groß- und
-  Kleinbuchstaben.}
+Historisch sind die Antiqua-Schriften im 15.\,Jahrhundert entstanden,
+indem die Großbuchstaben der antiken \emph{Capitalis monumentalis}
+--~der Schrift römischer Steininschriften~-- mit den Kleinbuchstaben
+der \emph{humanistischen Minuskel} kombiniert wurden.  Für
+handgeschriebene Bücher waren vorher reine Minuskelschriften üblich,
+die sich ab Ende der Antike ursprünglich als Handschriften entwickelt
+hatten; höchstens einzelne Anfangsbuchstaben wurden als ausgeschmückte
+\emph{Initialen} in Großbuchstaben geschrieben.\footnote{Die
+  englischen Bezeichnungen \foreignlanguage{british}{uppercase} und
+  \foreignlanguage{british}{lowercase} für Groß- bzw. Kleinbuchstaben
+  kommen aus der Zeit des Bleisatzes, als die Lettern für
+  Großbuchstaben in Setzkästen in der oberen und die für
+  Kleinbuchstaben in der unteren Schublade aufbewahrt wurden.}
 
 Innerhalb der Gattung der Antiqua-Schriften werden Schriftarten weiter
 in kleineren »Taxa« (um mal ein Wort aus der Biologie
