Brotschrift ist Antiqua.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -127,8 +127,21 @@ ohne Boden; wir gehen hier nicht weiter ins Detail.\footnote{Wer
   möchte, kann dazu sehr viel Weitergehendes auf Wikipedia oder im
   Typo\-lexikon (\url{https://www.typolexikon.de/}) lesen.}
 
-\todo[inline]{Angeblich™ lesen sich Schriften mit Serifen im Fließtext
-  leichter; auf jeden Fall sind sie traditioneller.}
+Die Schrift, in der der Großteil eines typographischen Werks gesetzt
+wird, wird historisierend die jeweilige \emph{Brotschrift} genannt~--
+mit ihr haben Schriftsetzer früher »ihr täglich Brot« verdient.
+Angeblich™ lesen sich im Fließtext Schriften mit Serifen leichter als
+Grotesken.  Es gibt dazu auch einige Untersuchungen; soweit ich
+(Philip) weiß, sind die aber zu keinen aussagekräftigen (sprich
+statistisch signifikanten) Ergebnissen gekommen.  (Tatsächlich sind
+serifenlose Schriften wohl teilweise hilfreich bei Legasthenie.)  Auf
+jeden Fall sind Grotesken eine jüngere Erfindung (sie sind Anfang des
+19.\,Jahrhunderts entstanden), und »traditionell« werden gedruckte
+Fließtexte in Antiqua gesetzt.  Auf nicht allzu hoch aufgelösten
+Pixel-Bildschirmen sind Serifen oft eher schlecht in gleichmäßiger
+Qualität darstellbar; daher werden in Computer-Kontexten, bspw. im
+Webdesign, häufig auch serifenlose Schriften als Brotschrift
+eingesetzt.
 
 \section{Schriftschnitte}
 \label{sec:Schnitte}
