--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -109,9 +109,9 @@ Klassifikation ist wie folgt:
   ja, mit Französisch) \emph{\foreignlanguage{british}{sans
       serif}}.\footnote{Nach \acr{DIN}~16518: »Serifenlose
     Linear-Antiqua«} (Auch hier sind uns Schriftuntergruppen egal.)
-  {\fontfamily{phv}\selectfont \textsmaller[.5]{Helvetica}}, % Nimbus Sans L
+  Bspw.  {\fontfamily{phv}\selectfont \textsmaller[.5]{Helvetica}}, % Nimbus Sans L
   {\fontfamily{pag}\selectfont \textsmaller[.5]{Avant Garde}}, % Gothic L
-  Bspw.  {\fontfamily{ua1}\selectfont \textsmaller[.5]{Arial}} % URW A030
+  {\fontfamily{ua1}\selectfont \textsmaller[.5]{Arial}} % URW A030
 \item Die letzte Hauptschriftgruppe der Antiqua-Schriften sind
   \emph{Zierschriften}.  Das sind generell alle Antiqua-Schriften, die
   keine Antiqua, Egyptienne oder Grotesk sind. Zu ihnen gehören
