Use nosep for all lists.

--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -138,7 +138,7 @@ Köln--Karlsruhe fährt der \acr{ICE} 203.«
 
 Er kann auch als Aufzählungszeichen verwendet werden (dann nennt man
 ihn manchmal »Spiegelstrich«):
- \begin{itemize}[label=--,nosep]
+ \begin{itemize}[label=--]
  \item Es gibt sone und
  \item solche, und
  \item dann gibt's noch ganz andere!
@@ -262,7 +262,7 @@ Stelle ein \emph{(umbruch-)geschütztes Leerzeichen} gleicher Breite
 Das \emph{schmale Leerzeichen} (\codepoint{2009}) ist zwischen \smallfrac18\ und
 \smallfrac16\ eines Gevierts breit und stets geschützt. In \LaTeX\ kann
 es durch \verb!\,! erzeugt werden. Es kommt u.\,a. zum Einsatz in
-\begin{itemize}[nosep]
+\begin{itemize}
 \item Abkürzungen wie etwa d.\,h., z.\,B. oder i.\,d.\,R.,
 \item Datumsangaben wie etwa 28.\,12.\,2024,
 \item Abkürzungen mit Nummern wie etwa §\,3, Thm.\,4.7,
@@ -271,7 +271,7 @@ es durch \verb!\,! erzeugt werden. Es kommt u.\,a. zum Einsatz in
 \end{itemize}
 
 Auf Englisch gibt es folgende zwei Besonderheiten:
-\begin{itemize}[nosep]
+\begin{itemize}
 \item In Abkürzungen wie »\foreignlanguage{british}{i.e.}« steht
   üblicherweise \emph{kein} Leerzeichen, auch kein schmales.
 \item Traditionell werden die Leerzeichen zwischen Sätzen ein wenig
