--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -27,7 +27,7 @@ Seite. Da beiden Satzspiegel zueinander »am Buchsteg gespiegelt« ausgerichtet
 sein sollen, ist es daher sinnvoll, die Seitenränder »oben«, »unten«, »innen«
 und »außen« zu betrachten. Im strengen klassischen Buchsatz gelten folgende
 Prinzipien:
-\begin{enumerate}[nosep]
+\begin{enumerate}
 \item Der äußere Rand ist doppelt so groß wie der innere.
 \item Der untere Rand ist doppelt so groß wie der obere.
 \item Das Seitenverhältnis des Satzspiegels gleicht dem der Seite.
@@ -299,7 +299,7 @@ Passt auf eine Seite keine neue Zeile mehr, muss eine neue begonnen werden; es
 ist also ein \emph{Seitenumbruch} vonnöten. So weit, so gut, allerdings sollten
 für ein optisch ansprechendes Ergebnis weitere Einschränkungen betrachtet
 werden:
-\begin{enumerate}[nosep]
+\begin{enumerate}
 \item Keine Seite darf mit einer (Unter-)Überschrift enden.
 %\item Keine Seite \emph{sollte} mit der ersten Zeile eines Absatzes enden.
 \item Keine Seite darf mit der letzten Zeile eines Absatzes beginnen.
@@ -347,7 +347,7 @@ werden Schriftgrade standardmäßig durch semantische Befehle wie \verb!\small!
 oder \verb!\large! eingestellt; dies ist sinnvoll, weil dadurch eine feste Skala
 benutzt wird. Hat man eine solche Skala nicht zur Verfügung, ist es sinnvoll,
 sich Schriftgrade für
-\begin{enumerate}[nosep]
+\begin{enumerate}
 \item Fußnoten,
 \item den normalen Text (am besten etwa 11\,pt),
 \item (Unter-)Überschriften und
