Bücher: oft Ren.-Antiqua.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -137,11 +137,12 @@ statistisch signifikanten) Ergebnissen gekommen.  (Tatsächlich sind
 serifenlose Schriften wohl teilweise hilfreich bei Legasthenie.)  Auf
 jeden Fall sind Grotesken eine jüngere Erfindung (sie sind Anfang des
 19.\,Jahrhunderts entstanden), und »traditionell« werden gedruckte
-Fließtexte in Antiqua gesetzt.  Auf nicht allzu hoch aufgelösten
-Pixel-Bildschirmen sind Serifen oft eher schlecht in gleichmäßiger
-Qualität darstellbar; daher werden in Computer-Kontexten, bspw. im
-Webdesign, häufig auch serifenlose Schriften als Brotschrift
-eingesetzt.
+Fließtexte in Antiqua gesetzt.  Besonders bei (hochqualitativen)
+Büchern sind Renaissance-Antiquas üblich.  Auf nicht allzu hoch
+aufgelösten Pixel-Bildschirmen sind Serifen oft eher schlecht in
+gleichmäßiger Qualität darstellbar; daher werden in
+Computer-Kontexten, bspw. im Webdesign, häufig auch serifenlose
+Schriften als Brotschrift eingesetzt.
 
 \section{Schriftschnitte}
 \label{sec:Schnitte}
