Add serif image.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -60,6 +60,19 @@ hatten; höchstens einzelne Anfangsbuchstaben wurden als ausgeschmückte
   Großbuchstaben in Setzkästen in der oberen und die für
   Kleinbuchstaben in der unteren Schublade aufbewahrt wurden.}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=.5\textwidth]{Serifen}
+  \caption{Schriftprobe (Liberation Serif) mit markierten
+    Serifen\protect\footnotemark}
+  \label{fig:Serifen}
+\end{figure}
+\footnotetext{Autor:
+  \href{https://commons.wikimedia.org/wiki/File:Serif_and_sans-serif_03.svg}
+  {XRDoDRX auf Wikimedia Commons},
+  Lizenz: \href{https://creativecommons.org/licenses/by-sa/3.0/}
+  {\acr{CC BY-SA}\,3.0}}
+
 Innerhalb der Gattung der Antiqua-Schriften werden Schriftarten weiter
 in kleineren »Taxa« (um mal ein Wort aus der Biologie
 zweckzuentfremden) klassifiziert:\footnote{In der Zeit des Bleisatzes
@@ -72,9 +85,8 @@ zweckzuentfremden) klassifiziert:\footnote{In der Zeit des Bleisatzes
 Die Gattung wird unterteilt in \emph{Hauptschriftgruppen} und diese
 jeweils in \emph{Schriftuntergruppen}.  Die Hauptschriftgruppen
 unterscheiden sich dabei durch die Art der an den Glyphen vorhandenen
-\emph{Serifen}, den Linien, die die Hauptstriche »abschließen«.  Die
-\todo{Abbildung (vergrößert) mit Serifen?}
-Klassifikation ist wie folgt:
+\emph{Serifen}, den Linien, die die Hauptstriche »abschließen«
+(s. \cref{fig:Serifen}).  Die Klassifikation ist wie folgt:
 \begin{itemize}
 \item Eine Schrift mit »normalen«, nicht betonten Serifen heißt
   \emph{Antiqua} bzw. englisch \emph{\foreignlanguage{british}{serif}}
