Layout and formulation.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -54,10 +54,10 @@ handgeschriebene Bücher waren vorher reine Minuskelschriften üblich,
 die sich ab Ende der Antike ursprünglich als Handschriften entwickelt
 hatten; höchstens einzelne Anfangsbuchstaben wurden als ausgeschmückte
 \emph{Initialen} in Großbuchstaben geschrieben.\footnote{Die
-  englischen Bezeichnungen \foreignlanguage{british}{uppercase} und
-  \foreignlanguage{british}{lowercase} für Groß- bzw. Kleinbuchstaben
-  kommen aus der Zeit des Bleisatzes, als die Lettern für
-  Großbuchstaben in Setzkästen in der oberen und die für
+  englischen Bezeichnungen \emph{\foreignlanguage{british}{uppercase}}
+  und \emph{\foreignlanguage{british}{lowercase}} für Groß-
+  bzw. Kleinbuchstaben kommen aus der Zeit des Bleisatzes, als in
+  Setzkästen die Lettern für Großbuchstaben in der oberen und die für
   Kleinbuchstaben in der unteren Schublade aufbewahrt wurden.}
 
 \begin{figure}
