Akronyme: optionales Argument für Reintext-Version.

--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -65,11 +65,11 @@ Kapitälchen hervorgehoben.\looseness-1
 
 Es ist ratsam, \emph{Akronyme} wie etwa \acr{SPD} oder \acr{PHP} mit leicht
 gesperrten Kapitälchen zu setzen, damit sie nicht, wie etwa SPD und PHP,
-hervorstechen. Bei Akronymen, die Zahlen enthalten (wie \acr{C-\kern-1pt3PO}
-oder \acr{BW\kern-.3px V\,29}), müssen dann aber \emph{Minuskelziffern} (siehe
+hervorstechen. Bei Akronymen, die Zahlen enthalten (wie \acr[C-3PO]{C-\kern-1pt3PO}
+oder \acr[BWV 29]{BW\kern-.3px V\,29}), müssen dann aber \emph{Minuskelziffern} (siehe
 \cref{sec:Ziffern}) verwendet werden, sonst erhält man
-\acr{C-\kern-1pt\figureversion{lf}{3}PO} und
-\acr{BW\kern-.3px V\,\figureversion{lf}{29}}.
+\acr[C-3PO]{C-\kern-1pt\figureversion{lf}{3}PO} und
+\acr[BWV 29]{BW\kern-.3px V\,\figureversion{lf}{29}}.
 
 \section{Versalien}
 
