--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -24,14 +24,14 @@ gestaltet~-- sonst ergibt sich {U\fontfamily{ptm}\selectfont
   n\fontfamily{pplj}\selectfont r\fontfamily{lmr}\selectfont
   u\fontfamily{uop}\selectfont h\fontfamily{pcr}\selectfont e}.  Liegt
 eine Schriftart in verschiedenen Varianten vor, was üblicherweise der
-Fall ist, so werden diese \emph{Schriftschnitte} genannt
-(s. \cref{sec:Schnitte}).  Eine solche Schriftart mit mehreren
-Schnitten nennt man dann auch eine \emph{Schriftfamilie}.\footnote{Das
-  ist das Beste, was ich (Philip) nach längerer Recherche zur
-  Unterscheidung der Begriffe \emph{Schriftart} und \emph{-familie}
-  herausbekommen zu haben glaube.  Allerdings fällt mir spontan
-  (während ich diesen Text schreibe) kein Beispiel für eine Schriftart
-  ein, von der es nur einen Schnitt gibt, die also keine Familie ist.}
+Fall ist, so werden diese \emph{Schriftschnitte} genannt (siehe
+\cref{sec:Schnitte}).  Eine solche Schriftart mit mehreren Schnitten
+nennt man dann auch eine \emph{Schriftfamilie}.\footnote{Das ist das
+  Beste, was ich (Philip) nach längerer Recherche zur Unterscheidung
+  der Begriffe \emph{Schriftart} und \emph{-familie} herausbekommen zu
+  haben glaube.  Allerdings fällt mir spontan (während ich diesen Text
+  schreibe) kein Beispiel für eine Schriftart ein, von der es nur
+  einen Schnitt gibt, die also keine Familie ist.}
 
 Schriftarten werden nach Aspekten ihrer Gestaltung klassifiziert.  Wir
 beschäftigen uns hier nur mit \emph{Satzschriften} (also keine
@@ -62,8 +62,8 @@ hatten; höchstens einzelne Anfangsbuchstaben wurden als ausgeschmückte
 
 \begin{figure}
   \centering
-  \includegraphics[width=.5\textwidth]{Serifen}
-  \caption{Schriftprobe (Liberation Serif) mit markierten
+  \includegraphics[width=.4\textwidth]{Serifen}
+  \caption{Schriftprobe \emph{(Liberation Serif)} mit markierten
     Serifen\protect\footnotemark}
   \label{fig:Serifen}
 \end{figure}
@@ -85,8 +85,8 @@ zweckzuentfremden) klassifiziert:\footnote{In der Zeit des Bleisatzes
 Die Gattung wird unterteilt in \emph{Hauptschriftgruppen} und diese
 jeweils in \emph{Schriftuntergruppen}.  Die Hauptschriftgruppen
 unterscheiden sich dabei durch die Art der an den Glyphen vorhandenen
-\emph{Serifen}, den Linien, die die Hauptstriche »abschließen«
-(s. \cref{fig:Serifen}).  Die Klassifikation ist wie folgt:
+\emph{Serifen}, den Linien, die die Hauptstriche »abschließen« (siehe
+\cref{fig:Serifen}).  Die Klassifikation ist wie folgt:
 \begin{itemize}
 \item Eine Schrift mit »normalen«, nicht betonten Serifen heißt
   \emph{Antiqua} bzw. englisch \emph{\foreignlanguage{british}{serif}}
@@ -159,8 +159,110 @@ Schriften als Brotschrift eingesetzt.
 \section{Schriftschnitte}
 \label{sec:Schnitte}
 
-%% Stärke, Lage, Breite.  Bei Lage (also gerade vs. kursiv) auch
-%% Historisches™ erwähnen.
+Die verschiedenen Schriftschnitte einer Schriftfamilie unterscheiden
+sich üblicherweise in den \emph{Auszeichnungsmerkmalen}
+\begin{itemize}
+\item \emph{Schriftstärke},
+\item \emph{Schriftlage} und
+\item \emph{Schriftbreite}.
+\end{itemize}
+Grundsätzlich können Ausprägungen der verschiedenen Merkmale frei
+miteinander kombiniert werden; ob eine konkrete Schriftfamilie den
+entsprechenden Schnitt hat ist eine andere Frage (und ebenso, ob und
+wann man »merkwürdige« Schnitte einsetzen möchte).
+
+Die \emph{Schriftstärke} bezeichnet die Dicke der Striche, aus denen
+die Glyphen bestehen.  Es gibt üblicherweise mindestens die
+Schriftstärken \emph{normal}
+(engl. \emph{\foreignlanguage{british}{regular}}) und \emph{fett}
+(engl. \emph{\foreignlanguage{british}{bold}}); viele Schriftfamilien
+bieten aber auch Zwischenstufen (siehe \cref{fig:Schriftstärken}).
+
+\begin{figure}
+  \centering
+  \includegraphics[width=.5\textwidth]{Schriftstärken}
+  \caption{Verschiedene Schriftstärken \emph{(Helvetica Neue)}}
+  \label{fig:Schriftstärken}
+\end{figure}
+
+Die \emph{Schriftlage} gibt an, ob die Glyphen »aufrecht« stehen oder
+»geneigt« sind; üblicherweise wird unterschieden zwischen
+\emph{normal} (engl. \emph{\foreignlanguage{british}{roman}}) und
+\emph{kursiv} engl. \emph{\foreignlanguage{british}{italic}}.
+Historisch geht kursive Schrift auf Schreibschriften (»Kursive«)
+zurück, konkret auf die \emph{humanistische Kursive} von \name{Niccolò
+  de' Niccoli} (1364--1437).  Daher ändert sich von normaler zu
+kursiver Schrift meist --~zumindest bei Antiqua~-- auch die Form der
+Buchstaben.  Wie schon in \cref{sec:herv_kursiv} erwähnt sollte man
+deshalb vermeiden, kursive Schrift durch künstlich geschrägte Schrift
+(engl. \emph{\foreignlanguage{british}{slanted}}) zu ersetzen.  Bei
+Grotesken ist der kursive Schnitt meist aber tatsächlich vor allem
+geneigt, ohne die Form der Glyphen zu verändern.\footnote{Manche
+  Schriftfamilien unterscheiden zwischen den Lagen \emph{kursiv} und
+  \emph{schräg} (engl. \emph{\foreignlanguage{british}{oblique}}); das
+  ist aber ziemlich selten.}  Ein Beispiel findet sich in
+\cref{fig:Schriftlagen}.
+
+\begin{figure}
+  \centering
+
+  \subfloat[\emph{Minion}]
+  {\begin{minipage}{.35\textwidth}
+      \large Minion normal afg
+
+      \textit{Minion kursiv afg}
+
+      \textsl{Minion geschrägt afg}\par
+    \end{minipage}}
+  \hspace{.1\textwidth}
+  \subfloat[\emph{Classico}]
+  {\begin{minipage}{.35\textwidth}
+      \large\sffamily Classico normal afg
+
+      \textit{Classico kursiv afg}
+
+      \textsl{Classico geschrägt afg}\par
+    \end{minipage}}
+
+  \caption{Verschiedene Schriftlagen}
+  \label{fig:Schriftlagen}
+\end{figure}
+
+Schließlich gibt es noch Schriftfamilien, bei denen die
+\emph{Schriftbreite} variiert werden kann.  Außer einer
+\emph{normalen} Breite
+(engl. \emph{\foreignlanguage{british}{regular}}) gibt es dann
+bspw. die Breiten \emph{schmal}
+(engl. \emph{\foreignlanguage{british}{condensed}}) oder \emph{breit}
+(engl. \emph{\foreignlanguage{british}{expanded}}), manchmal auch in
+\emph{halb-} (engl. \emph{\foreignlanguage{british}{semi}}),
+\emph{extra-} oder gar \emph{ultra-}.  Ein Beispiel findet sich in
+\cref{fig:Schriftbreiten}.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=.5\textwidth]{Schriftbreiten}
+  \caption{Schriftbreiten \emph{normal} und \emph{schmal}
+    (\emph{Avenir Next}, Schrifstärke \emph{Demi-Bold})}
+  \label{fig:Schriftbreiten}
+\end{figure}
+
+Abgesehen von den oben erwähnten üblichen Auszeichnungsmerkmalen haben
+gute Schriften meist noch Schriftschnitte für \emph{Kapitälchen}
+(siehe \cref{sec:Kapitälchen}).  Außerdem gibt es bei professionellen
+Schriften oft verschiedene \emph{optische Größen}, d.\,h. Schnitte,
+die an verschiedene Schriftgrößen angepasst sind (siehe
+\cref{fig:optische_Größen}).
+
+\begin{figure}
+  \centering
+  \includegraphics[width=.65\textwidth]{optische_Größen}
+  \caption{Verschiedene optische Größen \emph{(Minion
+      Pro)}\protect\footnotemark}
+  \label{fig:optische_Größen}
+\end{figure}
+\footnotetext{Autor: \href{https://www.typolexikon.de/} {Wolfgang
+    Beinert, www.typolexikon.de}}
 
 \section{Liniensystem}
 \label{sec:Linien}
