--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -177,6 +177,8 @@ Schriftstärken \emph{normal}
 (engl. \emph{\foreignlanguage{british}{regular}}) und \emph{fett}
 (engl. \emph{\foreignlanguage{british}{bold}}); viele Schriftfamilien
 bieten aber auch Zwischenstufen (siehe \cref{fig:Schriftstärken}).
+Die Schriftstärke hat einen Einfluss auf den \emph{Grauwert} der
+Schrift: stärkere Glyphen wirken dunkler.
 
 \begin{figure}
   \centering
@@ -201,7 +203,8 @@ geneigt, ohne die Form der Glyphen zu verändern.\footnote{Manche
   Schriftfamilien unterscheiden zwischen den Lagen \emph{kursiv} und
   \emph{schräg} (engl. \emph{\foreignlanguage{british}{oblique}}); das
   ist aber ziemlich selten.}  Ein Beispiel findet sich in
-\cref{fig:Schriftlagen}.
+\cref{fig:Schriftlagen}.  Schriftschnitte in verschiedenen Lagen sind
+üblicherweise so gestaltet, dass der Grauwert unverändert ist.
 
 \begin{figure}
   \centering
