Translate kerning and spacing.

--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -282,7 +282,7 @@ die an verschiedene Schriftgrößen angepasst sind (siehe
 %% und LibreOffice benutzen auch ca. 1,2-faches der Schriftgröße als
 %% Grundeinstellung, das heißt da aber »einzeilig«.
 
-\section{Kerning und Spacing}
+\section{Spationierung und Unterschneidung}
 \label{sec:KernSpace}
 
 %% Hier microtype erwähnen?
