Add forgotten labels.

--- a/2-Hervorhebungen.tex
+++ b/2-Hervorhebungen.tex
@@ -8,6 +8,7 @@ Gliederungselemente (wie Titel und Überschriften) zur besseren Übersichtlichke
 je nach Situation verschieden geeignet sein können.
 
 \section{Kursivsatz}
+\label{sec:herv_kursiv}
 
 Die\marginnote{\texttt{\textbackslash textit}} wohl gängigste Methode, Passagen
 im Fließtext hervorzuheben, ist, sie \emph{kursiv} zu setzen. Diese Hervorhebung
@@ -31,6 +32,7 @@ möglich, sticht aber sehr hervor und sollte deshalb mit Vorsicht eingesetzt
 werden.\looseness-1
 
 \section{Kapitälchen}
+\label{sec:Kapitälchen}
 
 Viele\marginnote{\texttt{\textbackslash textsc}} Schriftarten besitzen eine
 Variante der Großbuchstaben, die so hoch wie übliche Kleinbuchstaben ist. Diese
