--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -264,11 +264,46 @@ die an verschiedene Schriftgrößen angepasst sind (siehe
       Pro)}\protect\footnotemark}
   \label{fig:optische_Größen}
 \end{figure}
-\footnotetext{Autor: \href{https://www.typolexikon.de/} {Wolfgang
-    Beinert, www.typolexikon.de}}
+\footnotetext{Autor:
+  \href{https://www.typolexikon.de/konsultationsgroessen/optische-groessen-optical-sizes/}
+  {Wolfgang Beinert},
+  \href{https://www.typolexikon.de/}{www.typolexikon.de}}
 
-\section{Liniensystem}
+\section{Schriftlinien und Maßeinheiten}
 \label{sec:Linien}
+
+Die \emph{metrische} Gestaltung einer Schrift, also die Größe ihrer
+Glyphen und der Teilbestandteile der Glyphen, wird mithilfe von
+\emph{Schriftlinien} beschrieben (siehe \cref{fig:Liniensystem}).  Die
+Glyphen ruhen auf der \emph{Grundlinie}.  Großbuchstaben reichen nach
+oben bis zur \emph{H-Linie}; die Höhe der Großbuchstaben wird als
+\emph{Versalhöhe} bezeichnet.  Für Kleinbuchstaben spielen insgesamt
+vier Linien eine Rolle: zusätzlich zur Grundlinie sind das die
+\emph{x-Linie}, bis zu der die \emph{Mittellänge} (das »mittlere
+Stockwerk«) der Buchstaben reicht, die \emph{p-Linie}, zu der
+Buchstaben mit \emph{Unterlänge} (einem »unteren Stockwerk«)
+herabreichen, und die \emph{k-Linie}, zu der Buchstaben mit
+\emph{Oberlänge} (einem »oberen Stockwerk«) hinaufreichen.  Der
+Abstand von Grundlinie zu x-Linie heißt \emph{x-Höhe}.  Die
+entsprechenden Teile der Glyphen hören oft nicht strikt an den
+entsprechenden Linien auf, insbesondere bei Rundungen; stattdessen
+ragen sie oft ein bisschen über, sodass sie \emph{optisch} »an der
+Linie« enden.  Zu beachten ist noch, dass es eine eigene k-Linie
+\emph{nur bei Renaissance-Antiquas} gibt; bei allen anderen
+Antiqua-Schriften reichen Oberlängen von Minuskeln wir die Majuskeln
+bis zur H-Linie.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Liniensystem}
+  \caption{Schriftlinien\protect\footnotemark}
+  \label{fig:Liniensystem}
+\end{figure}
+\footnotetext{Autor:
+  \href{https://de.wikipedia.org/wiki/Datei:Typografisches_Liniensystem.svg}
+  {Crissov auf Wikipedia},
+  Lizenz: \href{https://creativecommons.org/licenses/by-sa/4.0/}
+  {\acr{CC BY-SA}\,4.0}}
 
 %% Inkl. Maßeinheiten und so, und Zeilenabstand
 
