--- a/3-Schriften.tex
+++ b/3-Schriften.tex
@@ -290,7 +290,7 @@ entsprechenden Linien auf, insbesondere bei Rundungen; stattdessen
 ragen sie oft ein bisschen über, sodass sie \emph{optisch} »an der
 Linie« enden.  Zu beachten ist noch, dass es eine eigene k-Linie
 \emph{nur bei Renaissance-Antiquas} gibt; bei allen anderen
-Antiqua-Schriften reichen Oberlängen von Minuskeln wir die Majuskeln
+Antiqua-Schriften reichen Oberlängen von Minuskeln wie die Majuskeln
 bis zur H-Linie.
 
 \begin{figure}
